2010-09-25  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/gcd.cc (Fgcd): Rewrite. Use more efficient code.
	Specialize for simple/extended Euclid. Handle integer arguments.

2010-09-24  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/regexp.cc (regexp, regexprep): Update docstring to 
	discuss limits when not compiled with PCRE.

2010-09-23  John W. Eaton  <jwe@octave.org>

	* Makefile.am (ALL_DEF_FILES): New variable.
	(DEF_FILES): Don't include $(DLD_DYNAMIC_DEF_FILES) in the list.
	(DEF_FILES DLD_DYNAMIC_DEF_FILES): Fix dependency info.
	(doc-files): Depend on $(ALL_DEF_FILES), not $(DEF_FILES).

2010-09-22  Jaroslav Hajek  <highegg@gmail.com>

	* xpow.cc (elem_xpow (float, const NDArray&),
	elem_xpow (float, const FloatNDArray&)): Use simpler tests.

2010-09-21  John W. Eaton  <jwe@octave.org>

	* oct-stream.h (octave_base_stream::file_number): Return 0, 1,
	and 2 for named stdin, stdout, and stderr streams; -1 otherwise.

2010-09-21  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (Fgethostname): New function.

2010-09-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/time.cc (Fmktime): New tests (bug #31079).

2010-09-20  John W. Eaton  <jwe@octave.org>

	Bug #31085:

	* file-io.cc (do_stream_open): Use fopen, fileno, and gzdopen
	instead of gzopen.  Pass integer file id to
	octave_zstdiostream::create.

	* oct-stdstrm.h (class octave_base_tstdiostream): Rename from
	octave_tstdiostream.
	(octave_tstdiostream::fnum): New data member.
	(octave_tstdiostream::file_number): New member function.
	(octave_tstdiostream::octave_tstdiostream): New arg, FID.
	(octave_tstdiostream::create): Delete.
	(class octave_stdiostream, class octave_zstdiostream): New
	non-template classes derived from octave_tstdiostream to replace
	typedefs.

	* oct-stream.h (octave_base_stream::file_number): Now virtual
	and const.  Return -1 in defaault implementation.

2010-09-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list) [HAVE_PCRE]: